TinyMce: Upgrading from 3.1.1 to 3.2.0.2

--- a/ui/tiny_mce/themes/advanced/link.htm
+++ b/ui/tiny_mce/themes/advanced/link.htm
@@ -13,7 +13,7 @@
     <script type="text/javascript">
         /*
          * iKaaro
-         * bridge (epoz popup)
+         * bridge (editor popup)
          */
         function set_href_value_from_ikaaro(value) {
             document.getElementById('href').value = value;
