--- a/ui/tiny_mce/plugins/advlink/link.htm
+++ b/ui/tiny_mce/plugins/advlink/link.htm
@@ -39,7 +39,7 @@
 							<td class="column1"><label for="linklisthref">{#advlink_dlg.list}</label></td>
 							<td colspan="2" id="linklisthrefcontainer"><select id="linklisthref"><option value=""></option></select></td>
 						</tr>
-						<tr>
+						<tr id="tr-anchorlistcontainer">
 							<td class="column1"><label for="anchorlist">{#advlink_dlg.anchor_names}</label></td>
 							<td colspan="2" id="anchorlistcontainer"><select id="anchorlist"><option value=""></option></select></td>
 						</tr>
